# fastapi_tutorial

./: .gitignore  pyproject.toml
fastapi_tutorial/: main.py  models.py
tests/: test_fastapi_tutorial.py
