[tool.poetry]
name = "fastapi_tutorial"
version = "0.1.0"
description = ""
authors = ["sburniak <sebastian.burniak@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "^0.104.1"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
